@startuml
!theme mono

class EmailClassifierFacade {
    ++set_model(model: Model): void
}

interface Model {
    +execute(): void
}

class Randomforest {
    +execute(): void
}

class Context {
    -strategy: Strategy
    +set_model(model: Model): void
    +executeStrategy(): void
}

Model <|.. Randomforest
Model <|.. Bayes
Context *-- Model
EmailClassifierFacade o-- Context

@enduml
